# rhbp

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  PlanningSzenario.dia  README  README.md  ff.h  inst_final.c  inst_hard.c  inst_pre.c  lex.fct_pddl.c  memory.c  package.xml  relax.c  robotDomain.pddl  robotProblem.pddl  scan-fct_pddl.tab.c  scan-fct_pddl.y  search.c  setup.py
ffp/: .gitignore  CMakeLists.txt  package.xml  test.py
ffp/src/: ffp.c
knowledge_base/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
knowledge_base/launch/: all.test  knowledge_base_manager_test.test  knowledge_base_node.launch  unit_tests.test  update_handler_test.test
knowledge_base/msg/: DiscoverInfo.msg  Fact.msg  FactAdded.msg  FactRemoved.msg  FactUpdated.msg  FactWasRemoved.msg  Push.msg
knowledge_base/src/: knowledge_base_manager.py  knowledge_base_node.py  tuple_space.py
knowledge_base/src/LindyPy/: LICENSE  PKG-INFO  README  example_script.py  setup.cfg  setup.py
knowledge_base/src/kb_rqt_plugin/: kb_gui.py
knowledge_base/src/knowledge_base/: inverted_tuple_space.py  knowledge_base_client.py  knowledge_base_manager.py  knowledge_base_node.py  tuple_space.py  update_handler.py
knowledge_base/src/rostest/: knowledge_base_manager_test.py  update_handler_test.py
knowledge_base/src/tests/: inverted_tuple_space_test.py  knowledge_base_manager_test.py  knowledge_base_manager_topic_name_generation_test.py  tuple_space_test.py  update_handler_test.py
knowledge_base/srv/: All.srv  Exists.srv  Peek.srv  Pop.srv  Push.srv  Update.srv  UpdateSubscribe.srv
knowledge_base/test/: all.test  knowledge_base_manager_test.test  update_handler_test.test
launch/: planner.launch
metric_ff/: CMakeLists.txt  README.md  expressions.c  ff.h  inst_final.c  inst_pre.c  lex.ops_pddl.c  main.c  memory.h  output.c  package.xml  parse.c  robotProblem.pddl  scan-fct_pddl.tab.c  scan-ops_pddl.tab.c  scan-ops_pddl.y  search.c  search.h  setup.py
rhbp_core/: .gitignore  CMakeLists.txt  Doxyfile  README.md  issues.txt  package.xml  plugin.xml  setup.py
rhbp_core/cfg/: Manager.cfg
rhbp_core/doc/: Makefile  behaviour_components.rst  conf.py  index.rst  manifest.yaml  modules.rst  planner_node.rst  utils.rst
rhbp_core/launch/: goal_test.test  greedy_activator_test.test  knowledge_sensor_test.test  network_behavior_test.test  planner.launch  python_logging.conf  sensor_test.test  topic_listener.test  topic_listener_node.launch
rhbp_core/msg/: Activation.msg  ActivationState.msg  ConditionState.msg  ConditionValue.msg  Correlation.msg  DiscoverInfo.msg  InputState.msg  PlannerStatus.msg  SensorValue.msg  Status.msg  Wish.msg
rhbp_core/scripts/: clean_rhbp_logs.sh  rqt_planner_gui
rhbp_core/src/: planner_node.py
rhbp_core/src/behaviour_components/: TopicListener.py  activation_algorithm.py  activators.py  behaviours.py  condition_elements.py  conditions.py  delegation_behaviour.py  delegation_clients.py  delegation_interface.py  goals.py  manager_node.py  managers.py  network_behavior.py  pddl.py  planner.py  sensors.py  topic_listener.py  util.py
rhbp_core/src/logging_scripts/: activation.gplot  parseLogs.py  plot_activation.sh  sensors.gplot
rhbp_core/src/reinforcement_component/: dqn-model.py  dqn_model.py  exploration_strategies.py  input_state_transformer.py  nn_model.py  nn_model_base.py  nn_model_batch.py  q_learning_model.py  reinforcement_learning_config.py  reinforcement_learning_constants.py  rl_component.py  rl_component_node.py  rl_config.py  test_environment.py
rhbp_core/src/rostests/: condition_elements_test.py  dynamic_sensor_test.py  goal_test.py  greedy_activator_test.py  knowledge_sensor_test.py  manager_test.py  network_behavior_test.py  simple_sensor_test.py  topic_listener_test.py
rhbp_core/src/rqt_planner_gui/: behaviourWidget.py  behaviour_planner_gui.py  goalWidget.py
rhbp_core/src/tests/: activation_algorithm_test.py  activators_test.py  common.py  knowledge_sensor_test.py  negation_test.py  pddl_test.py  planner_test.py
rhbp_core/src/utils/: deprecation.py  misc.py  rhbp_logging.py  ros_helpers.py  sensor_value_transformer.py  topic_listener.py
rhbp_core/srv/: AddBehaviour.srv  AddGoal.srv  DoStep.srv  GetActivation.srv  GetPDDL.srv  GetPaused.srv  GetState.srv  GetStatus.srv  GetStepping.srv  PlanWithGoal.srv  SetInteger.srv  SetStepping.srv  TopicUpdateSubscribe.srv  TrainBatches.srv
rhbp_core/test/: condition_elements_test.test  dynamic_sensor_test.test  goal_test.test  manager_test.test  simple_sensor_test.test  topic_listener_test.test
rhbp_decomposition/: CMakeLists.txt  README.md  package.xml  setup.py
rhbp_decomposition/scripts/: planner_node.py
rhbp_decomposition/src/decomposition_components/: cost_computing.py  delegation_behaviour.py  delegation_clients.py  delegation_goal.py  goal_wrapper.py  manager_client.py  managers.py
rhbp_decomposition/src/decomposition_rostests/: manager_unit_test.py
rhbp_decomposition/src/decomposition_tests/: behaviour_unit_test.py  clients_unit_test.py  cost_computing_test.py  cost_computing_unit_test.py  decomposition_goal_unit_test.py  delegation_client_unit_test.py  goal_wrapper_unit_test.py  goals_unit_test.py  manager_unit_test.py  test_utils.py
rhbp_decomposition/src/tests/: basic_sceanrio.py  cost_computing_test.py  decomposition_goal_unit_test.py  delegation_client_unit_test.py  goal_wrapper_unit_test.py
rhbp_decomposition/test/: cost_computing_test.test  manager.test
rhbp_rl/: CMakeLists.txt  package.xml  setup.py
rhbp_rl/src/rhbp_rl/: activation_algorithm.py  dqn_model.py  exploration_strategies.py  input_state_transformer.py  rl_component.py  rl_component_node.py  rl_config.py
rhbp_utils/: CMakeLists.txt  README.md  package.xml  setup.py
rhbp_utils/launch/: knowledge_sensor_test.test
rhbp_utils/src/rhbp_utils/: __init__.py  knowledge_behaviour.py  knowledge_sensors.py  param_behaviour.py  param_sensors.py  sensors.py
rhbp_utils/src/rostests/: knowledge_sensor_test.py  param_utils_test.py
rhbp_utils/test/: knowledge_sensor_test.test  param_test.test
src/: ffp.c  (+6 more)
(+153 files in other folders)
