<?xml version="1.0"?>
<package>
  <name>ffp</name>
  <version>1.0.0</version>
  <description>The FF Proxy package; Encapsulating ff execution in a child process in order to address memory issues</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="christopher-eyk.hrabia@dai-labor.de">Christopher-Eyk Hrabia</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>LGPLv3</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ffp</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="s.wypler@campus.tu-berlin.de">Stephan Wypler</author>
  <author email="christopher-eyk.hrabia@dai-labor.de">Christopher-Eyk Hrabia</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>metric_ff</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>metric_ff</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
