<?xml version="1.0"?>
<package>
  <name>knowledge_base</name>
  <version>0.0.1</version>
  <description>The knowledge_base package; provides a tupple space as own ros node; Ros wrapper for lindypy</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="rieger@campus.tu-berlin.de">Phillip Rieger</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>LGPLv3</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/knowledge_base</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="rieger@campus.tu-berlin.de">Phillip Rieger</author>
  <author email="christopher-eyk.hrabia@dai-labor.de">Christopher-Eyk Hrabia</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rostest</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>python-lindypy-pip</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
