<?xml version="1.0"?>
<package>
  <name>rhbp_core</name>
  <version>0.0.2</version>
  <description>The core modules of the rhbp planner</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="christopher-eyk.hrabia@dai-labor.de">Christopher-Eyk Hrabia</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>LGPLv3</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rhbp_core</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="s.wypler@campus.tu-berlin.de">Stephan Wypler</author>
  <author email="christopher-eyk.hrabia@dai-labor.de">Christopher-Eyk Hrabia</author>
  <author email="rieger@campus.tu-berlin.de">Phillip Rieger</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rostest</build_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>ffp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>ffp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
