<?xml version="1.0"?>
<package>
  <name>rhbp_rl</name>
  <version>0.0.1</version>
  <description>Reinforcement Learning extensions for RHBP</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="christopher-eyk.hrabia@dai-labor.de">Christopher-Eyk Hrabia</maintainer>

  <license>LGPLv3</license>

  <author email="pat@my-lehmann.de">Patrick Lehmann</author>
  <author email="christopher-eyk.hrabia@dai-labor.de">Christopher-Eyk Hrabia</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rhbp_core</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rhbp_core</run_depend>
  <run_depend>rospy</run_depend>


</package>
